# new_tui

./: Cargo.toml
src/: app.rs  events.rs  main.rs
src/audyo/: service.rs
