[package]
name = "new_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version="0.29.0"}
itertools = "0.14.0"
rand = "0.9.1"
ratatui = { version="0.29.0" }
unicode-width = "0.2.0"
fakeit = "1.1"
tokio = { version = "1.45.1", features = ["full"] }
octocrab = "0.44.1"
tokio-stream = "0.1.17"
thiserror = "2.0.12"
